# AIStreamEye

./: .gitignore  CMakeLists.txt  README.md  setup_visualization.sh  test_frame_extraction.cpp  visualize_analysis.py
include/video_analyzer/: bitrate_analyzer.h  data_models.h  ffmpeg_context.h  ffmpeg_error.h  frame_extractor.h  frame_renderer.h  frame_statistics.h  gop_analyzer.h  gui_application.h  gui_config.h  motion_vector_analyzer.h  scene_detector.h  stream_analyzer.h  stream_decoder.h  thread_pool.h  video_analyzer.h  video_decoder.h
resources/: icon.icns  icon.rc
scripts/: download_stb_image.sh  generate_icon.py  generate_test_videos.sh
src/: bitrate_analyzer.cpp  data_models.cpp  ffmpeg_context.cpp  frame_extractor.cpp  frame_renderer.cpp  frame_statistics.cpp  gop_analyzer.cpp  gui_application.cpp  gui_config.cpp  main.cpp  main_gui.cpp  motion_vector_analyzer.cpp  scene_detector.cpp  stream_analyzer.cpp  stream_decoder.cpp  thread_pool.cpp  video_analyzer.cpp  video_decoder.cpp
tests/: bitrate_analyzer_test.cpp  data_models_test.cpp  ffmpeg_context_test.cpp  frame_statistics_test.cpp  gop_analyzer_test.cpp  motion_vector_analyzer_test.cpp  property_tests.cpp  scene_detector_test.cpp  stream_decoder_test.cpp  thread_pool_test.cpp  video_analyzer_test.cpp  video_decoder_test.cpp
